<resources>
    <string name="app_name">YadoManage</string>
    <string name="title_activity_teacher">activity_teacher</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="nav_home">Trang Chủ </string>
    <string name="nav_stream">Thêm Sinh Viên</string>
    <string name="nav_history">History</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_change_password">Đổi Mật </string>

    <string name="nav_draw_open">Open navigation drawer</string>
    <string name="nav_draw_close">Close navigation drawer</string>
    <string name="title_activity_student_login">StudentLogin</string>
</resources>